# ecpo-eynollah

./: .gitignore  COPYING.md  README.md  eynollah_training.md  groundtruth.md  pyproject.toml
.github/workflows/: ci.yml  pypi.yml
ecpo_eynollah/: config_handler.py  download_ls_imgs.py  download_non_jingbao.py  download_test_data.py  explore_img.ipynb  groundtruth.py  infer_eynollah.sh  prepare_data.py  prepare_for_training.sh  split_pages.py  split_spreads.py  utils.py
ecpo_eynollah/config/: config_jingbao_2segs.json  config_jingbao_3segs_1930.json  config_jingbao_3segs_1939.json  config_schema.json  default_config.json
from-Vahid/: json2label.ipynb
labelstudio/: README.md  ecpodata.xml  eynollah.xml  labelstudio.xml
tests/: test_config_handler.py  test_ecpo_eynollah.py  test_split_pages.py  test_utils.py
